商品名を取得するextensionを実装

--- a/homula-camp-app/extensions/homula-theme-extension/locales/en.default.json
+++ b/homula-camp-app/extensions/homula-theme-extension/locales/en.default.json
@@ -1,8 +1,6 @@
 {
   "product": {
     "product_id": "Product ID",
-    "home": {
-      "recommendationText": "Recommended Product!"
-    }
+    "submit": "Get Product Name"
   }
 }
