--- a/homula-camp-app/extensions/homula-checkout-ui/locales/en.default.json
+++ b/homula-camp-app/extensions/homula-checkout-ui/locales/en.default.json
@@ -1,3 +1,6 @@
 {
-  "welcome": "Welcome to the {{target}} extension!"
+  "version": "extension version",
+  "cart": {
+    "length": "{{length}} items in your cart."
+  }
 }
