--- a/homula-camp-app/extensions/homula-checkout-ui/locales/ja.json
+++ b/homula-camp-app/extensions/homula-checkout-ui/locales/ja.json
@@ -1,3 +1,6 @@
 {
-  "welcome": "Welcome to the {{target}} extension!"
+  "version": "extensionバージョン",
+  "cart": {
+    "length": "{{length}}個の商品がカートに入っています。"
+  }
 }
